--- a/www/html/assets/css/profile.css
+++ b/www/html/assets/css/profile.css
@@ -37,13 +37,15 @@
 }
 
 .profile-body table {
-    width: 100%;
+    width: 70%;
+    float: left;
+    display: inline;
 }
 
 .profile-body td {
     display: inline-block;
     padding: 5px 10px;
-    width: 30%;
+    width: 100%;
 }
 
 .profile-body-key {
@@ -66,10 +68,11 @@
     font-weight: 400;
     font-family: "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
     -webkit-appearance: none;
+    padding: 3%;
 }
 
 .profile-able:hover {
-    widows: 100%;
+    width: 100%;
     background-color: #eee;
     border: 1.5px solid transparent;
     -webkit-transition: background-color 0.3s, border-color 0.3s;
@@ -86,7 +89,6 @@
 
 .profile-foot {
     margin-top: 20px;
-    s
 }
 
 .profile-foot input {
@@ -118,4 +120,94 @@
     color: #FFF;
     background: #545454;
     border-color: #545454;
+}
+
+.profile-body-table {
+    display: inline-block;
+    width: 80%;
+}
+
+.profile-body-avatar {
+    width: 200px;
+    height: 200px;
+    float: left;
+    display: inline;
+    text-align: center;
+}
+
+.profile-body-avatar-img {
+    max-height: 200px;
+    max-width: 200px;
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin-bottom: 10%;
+    padding-left: 30px;
+    padding-right: 20px;
+}
+
+.profile-body-avatar-img-cover {
+    border-radius: 50%;
+    width: 140px;
+    height: 140px;
+    overflow: hidden;
+    position:relative;
+}
+
+.profile-body-avatar-img-cover::after{
+    position:absolute;
+    content:'';
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    border-radius:50%;
+    box-shadow:0 0 30px 10px rgba(255,255,255,.7) inset;
+}
+
+.update-input-avatar-button {
+    display: inline;
+    width: 100px;
+    background: none;
+    color: #545454;
+    border-color: #545454;
+    background-image: none;
+    border: 2px solid;
+    border-radius: 3px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    letter-spacing: 1px;
+    text-decoration: none;
+    -moz-user-select: none;
+    margin-bottom: 0;
+    vertical-align: middle;
+    white-space: nowrap;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 8px 20px;
+}
+
+.update-input-avatar-button input {
+    opacity: 0;
+    margin-top: -20px;
+    margin-left: 40px;
+    width: 100px;
+    display: inline;
+    float: left;
+    cursor: pointer
+}
+
+.update-input-avatar-button input:hover {
+    cursor: pointer;
+}
+
+.update-input-avatar-button:hover {
+    color: #FFF;
+    text-decoration: none;
+    background: #545454;
+    border-color: #545454;
+    cursor: pointer;
 }
