--- a/www/html/assets/css/content.css
+++ b/www/html/assets/css/content.css
@@ -1,17 +1,52 @@
+button:focus {
+    outline:none;
+}
+
+.lead {
+    overflow: auto;
+    width: auto;
+    height: auto;
+    position:relative;
+    margin: 2%;
+    /*overflow-y:scroll;*/
+}
+
+.rules::-webkit-scrollbar{
+    width:8px;
+    height:8px;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+.rules::-webkit-scrollbar-track{
+    background: rgba(0, 0, 0, 0.2);
+    border-radius:5px;
+}
+.rules::-webkit-scrollbar-thumb{
+    background: rgba(56, 147, 95);
+    border-radius:5px;
+}
+.rules::-webkit-scrollbar-thumb:hover{
+    background: rgba(56, 147, 95);
+}
+.rules::-webkit-scrollbar-corner{
+    background: rgba(56, 147, 95);
+}
+
 .rules {
-    overflow: hidden;
+    overflow: auto;
+    overflow-y: none;
 }
 
 .rules li {
     list-style: none;
     position: relative;
-    padding: 0 0 0 2em;
+    display: inline-block;
+    /*padding: 0 0 0 2em;
     margin: 0 0 .5em 10px;
     -webkit-transition: .12s;
-    transition: .12s;
+    transition: .12s;*/
 }
 
-.rules li::before {
+/*.rules li::before {
     position: absolute;
     content: '\2022';
     font-family: Arial;
@@ -24,13 +59,13 @@
     line-height: .75;
     -webkit-transition: .5s;
     transition: .5s;
-}
+}*/
 
-.rules li:hover {
+/*.rules li:hover {
     color: #FFF;
-}
+}*/
 
-.rules li:hover::before {
+/*.rules li:hover::before {
     -webkit-transform: scale(2);
     -ms-transform: scale(2);
     transform: scale(2);
@@ -38,17 +73,19 @@
     text-shadow: 0 0 4px;
     -webkit-transition: .1s;
     transition: .1s;
-}
+}*/
 
 .rules {
+    width: 100%;
+    height: 600px;
     display: inline-block;
     text-align: left;
     vertical-align: top;
     background: rgba(0, 0, 0, 0.2);
     color: rgba(19, 78, 29, 0.72);
     border-radius: 5px;
-    padding: 1.5em;
-    margin: 2%;
+    /*padding: 10px;*/
+    /*margin: 2%;*/
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -57,3 +94,144 @@
     font-size: 20px;
     font-weight: 700;
 }
+
+.goods {
+    width: 192px;
+    height: 300px;
+    margin: 15px;
+}
+.goods:hover {
+    cursor: pointer;
+}
+
+.goods img {
+    width: 200px;
+    height: 200px;
+
+}
+
+.goods h1 {
+    font-size: 18px;
+    font-weight: normal;
+    text-align: left;
+}
+
+.goods p {
+    font-size: 22px;
+    width: auto;
+    float: left;
+}
+
+.goods_add {
+    font-size: 26px;
+    font-weight: bold;
+    border: none;
+    background: 0;
+    float: right;
+    padding-bottom: 20px;
+}
+
+.dialog {
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.dialog_content {
+    width: 600px;
+    border: 1px solid rgba(56, 147, 95);
+    border-radius: 10px;
+    background: rgba(243,239,224);
+
+}
+
+#dialog_close {
+    font-size: 25px;
+    font-weight: 300;
+    border:none;
+    color: rgba(56, 147, 95);
+    float: right;
+    background: rgba(243,239,224);
+}
+
+.dialog_content img {
+    width: 250px;
+    height: 250px;
+    margin: 30px;
+    float: left;
+}
+
+.dialog_content p {
+    clear: both;
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+    width: auto;
+    text-align: left;
+    color:rgba(19, 78, 29, 0.72);
+    padding: 10px;
+}
+
+.dialog_text {
+     float: left;
+     width: 280px;
+}
+
+.dialog_text h1 {
+    font-size: 22px;
+    font-weight: normal;
+    text-align: left;
+}
+
+.dialog_text p {
+    font-size: 26px;
+    width: auto;
+    text-align: left;
+    color:rgba(19, 78, 29, 0.72);
+}
+
+#num {
+    width: 30px;
+    height: 30px;
+    font-size: 22px;
+    color: rgba(0,0,0,0.5);
+    text-align: center;
+    margin-top: 20px;
+    float: left;
+}
+.num {
+    font-size: 30px;
+    line-height: 30px;
+    margin-top: 20px;
+    margin-left: 0;
+    padding-left: 0;
+    font-weight: bold;
+    float: left;
+    border:none;
+    color: rgba(56, 147, 95);
+    background: rgba(243,239,224);
+}
+
+#add_cart {
+    width: 70px;
+    height: 30px;
+    border: 2px solid rgba(19, 78, 29, 0.72);
+    border-radius: 20px;
+    background: rgba(243,239,224);
+    color: rgba(19, 78, 29, 0.72);
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 25px;
+    margin-top: 20px;
+}
+
+#add_cart:hover {
+    background: rgba(19, 78, 29, 0.72);
+    color: rgba(243,239,224);
+}
+
+
