--- a/www/html/assets/css/cart.css
+++ b/www/html/assets/css/cart.css
@@ -3,15 +3,13 @@
     bottom: 0px;
     right: 0px;
     /*举例右边3像素*/
-    /*position: absolute;*/
-    float: right;
+    position: absolute;
     padding-bottom: 3px;
     width: 360px;
     height: 100%;
     padding-left: 16px;
     text-align: center;
     padding-top: 10px;
-    margin-left: 15px;
 }
 
 .hide-cart-container {
@@ -24,13 +22,4 @@
     margin-top: 20px;
     font-size: 36px;
     z-index: 999;
-}
-
-#cart_submit {
-    width: 70px;
-    height: 30px;
-    border: 3px solid rgba(19, 78, 29, 0.72);
-    background: rgba(243,239,224);
-    color: rgba(19, 78, 29, 0.72);
-    font-weight: bold;
 }
