--- a/www/html/assets/css/cart.css
+++ b/www/html/assets/css/cart.css
@@ -7,11 +7,12 @@
     float: right;
     padding-bottom: 3px;
     width: 360px;
-    height: 100%;
+    height: 120%;
     padding-left: 16px;
     text-align: center;
     padding-top: 10px;
     margin-left: 15px;
+    margin-top: -5%;
 }
 
 .hide-cart-container {
