--- a/www/html/assets/css/admin.css
+++ b/www/html/assets/css/admin.css
@@ -7,19 +7,19 @@ textarea {
 }
 
 .admin-users-key,
-.admin-challenges-key {
+.admin-items-key {
     display: block;
     text-align: center;
 }
 
 .admin-users-value,
-.admin-challenges-value {
+.admin-items-value {
     display: block;
     text-align: center;
 }
 
 .admin-users-value-checkbox,
-.admin-challenges-value-checkbox {
+.admin-items-value-checkbox {
     cursor: pointer;
     text-align: center;
     height: 12px;
@@ -35,8 +35,8 @@ textarea {
 }
 
 .admin-users-del,
-.admin-challenges-del,
-.admin-challenges-edit {
+.admin-items-del,
+.admin-items-edit {
     background: none;
     color: #545454;
     border-color: #545454;
@@ -60,8 +60,8 @@ textarea {
 }
 
 .admin-users-del:hover,
-.admin-challenges-del:hover,
-.admin-challenges-edit:hover {
+.admin-items-del:hover,
+.admin-items-edit:hover {
     color: #FFF;
     background: #545454;
     border-color: #545454;
@@ -126,18 +126,18 @@ textarea {
     margin: 12px 0 0;
 }
 
-.admin-challenges-modal input[type=text] {
+.admin-items-modal input[type=text] {
     width: 100% !important;
 }
 
-.admin-challenges-modal input[type=text]:focus {
+.admin-items-modal input[type=text]:focus {
     border-color: #66afe9 !important;
     outline: 0 !important;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6) !important;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6) !important;
 }
 
-.admin-challenges-modal input[type=text]:hover {
+.admin-items-modal input[type=text]:hover {
     border: 1px solid transparent;
     -webkit-transition: background-color 0.3s, border-color 0.3s;
     transition: background-color 0.3s, border-color 0.3s;
