--- a/www/html/assets/css/content.css
+++ b/www/html/assets/css/content.css
@@ -114,6 +114,11 @@ button:focus {
     font-size: 18px;
     font-weight: normal;
     text-align: left;
+    overflow:hidden; 
+    text-overflow:ellipsis;
+    display:-webkit-box; 
+    -webkit-box-orient:vertical;
+    -webkit-line-clamp:2; 
 }
 
 .goods p {
