--- a/www/html/assets/css/profile.css
+++ b/www/html/assets/css/profile.css
@@ -34,6 +34,7 @@
 
 .profile-body {
     margin-top: 20px;
+    display: block;
 }
 
 .profile-body table {
@@ -89,6 +90,7 @@
 
 .profile-foot {
     margin-top: 20px;
+    display: block;
 }
 
 .profile-foot input {
@@ -105,7 +107,7 @@
     text-decoration: none;
     -moz-user-select: none;
     cursor: pointer;
-    display: inline-block;
+    display: block;
     margin-bottom: 0;
     vertical-align: middle;
     white-space: nowrap;
