--- a/www/html/assets/css/content.css
+++ b/www/html/assets/css/content.css
@@ -199,6 +199,14 @@ button:focus {
     color:rgba(19, 78, 29, 0.72);
 }
 
+.dialog_text h6 {
+    margin-top: 15px;
+    font-size: 16px;
+    width: auto;
+    text-align: left;
+    color:rgba(19, 78, 29, 0.72);
+}
+
 #num {
     width: 30px;
     height: 30px;
